--- a/templates/home.twig
+++ b/templates/home.twig
@@ -2,11 +2,11 @@
 {% block body %}
 <div class="container">
     {{ message }}
-    {% if size %}
+    {% if file is not empty %}
         <ul class="list-group mb-5">
-            <li class="list-group-item">File size: {{ size }}  bytes</li>
-            <li class="list-group-item">File name: {{ name }}</li>
-            <li class="list-group-item">File type: {{ type }}</li>
+            <li class="list-group-item">File size: {{ file.size }}  bytes</li>
+            <li class="list-group-item">File name: {{ file.name }}</li>
+            <li class="list-group-item">File type: {{ file.type }}</li>
         </ul>
     {% endif %}
     <form method="post" action="" enctype="multipart/form-data">
@@ -16,12 +16,12 @@
         </div>
         <button type="submit" name="upload">Upload file</button>
     </form>
-    {% if files %}
-    <ul class="list-group mt-5">
-        {% for file in files %}
-            <li class="list-group-item">{{ file }}</li>
-        {% endfor %}
-    </ul>
+    {% if files is not empty %}
+        <ul class="list-group mt-5">
+            {% for file in files %}
+                <li class="list-group-item">{{ file }}</li>
+            {% endfor %}
+        </ul>
     {% endif %}
 </div>
 {% endblock %}
